--- a/1. gugudan/gugudan.html
+++ b/1. gugudan/gugudan.html
@@ -10,8 +10,26 @@
 
 <body>
     <div id="root">
-
+        <div>{{first}}곱하기 {{second}}는?</div>
+        <form>
+            <input type="number" v-model="value">
+            <button>입력</button>
+            <div>{{value}}</div>
+        </form>
     </div>
+    <div id="result"></div>
 </body>
+<script>
+    const app = new Vue({
+        el: '#root',
+        data: {
+            first: Math.ceil(Math.random() * 9),
+            second: Math.ceil(Math.random() * 9),
+            value: '',
+            result: '',
+        },
+        methods: {},
+    });
+</script>
 
 </html>
